# AdventOfCode_Gregor

./: Cargo.toml  Jenkinsfile  Jenkinsfile.groovy  README.md
.github/workflows/: build.yml
aoc22-01/: Cargo.toml
aoc22-1/: Cargo.toml  aoc22-1.sublime-workspace
aoc_22_01/: Cargo.toml
aoc_22_01/src/: lib.rs  reader.rs
aoc_22_02/: Cargo.toml
aoc_22_02/src/: lib.rs  model.rs  reader.rs  utils.rs
aoc_22_03/: Cargo.toml
aoc_22_03/src/: lib.rs  model.rs  reader.rs  utils.rs
aoc_22_03/tests/: model_test.rs  reader_test.rs  utils_test.rs
aoc_22_04/: Cargo.toml
aoc_22_04/src/: lib.rs  model.rs  reader.rs  utils.rs
aoc_22_04/tests/: model_test_is_in.rs  model_test_overlaps.rs  reader_test.rs  utils_test.rs
aoc_22_05/: Cargo.toml
aoc_22_05/src/: lib.rs
aoc_22_05/tests/: test.rs
aoc_22_06/: Cargo.toml
aoc_22_06/src/: lib.rs
aoc_22_06/tests/: test.rs
aoc_22_07/: Cargo.toml
aoc_22_07/src/: filesystem.rs  lib.rs  terminal_output.rs
aoc_22_07/tests/: test.rs
aoc_23_01/: Cargo.toml
aoc_23_01/src/: lib.rs
aoc_23_01/tests/: test.rs
aoc_23_02/: Cargo.toml
aoc_23_02/src/: lib.rs
aoc_23_02/tests/: test.rs
aoc_23_03/: Cargo.toml
aoc_23_03/src/: lib.rs
aoc_23_03/tests/: test.rs
aoc_23_04/: Cargo.toml
aoc_23_04/src/: lib.rs
aoc_23_04/tests/: test.rs
aoc_23_05/: Cargo.toml
aoc_23_05/src/: lib.rs
aoc_23_05/tests/: test.rs
aoc_23_06/: Cargo.toml
aoc_23_06/src/: lib.rs
aoc_23_07/: Cargo.toml
aoc_23_08/: Cargo.toml
aoc_23_09/: Cargo.toml
aoc_23_10/: Cargo.toml
aoc_starter/: Cargo.toml
aoc_starter/src/: main.rs
(+15 files in other folders)
