[package]
name = "aoc_starter"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc_22_01 = { path = "../aoc_22_01" }
aoc_22_02 = { path = "../aoc_22_02" }
aoc_22_03 = { path = "../aoc_22_03" }
aoc_22_04 = { path = "../aoc_22_04" }
aoc_22_05 = { path = "../aoc_22_05" }
aoc_22_06 = { path = "../aoc_22_06" }